Adding docker file

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Dev Portfolio – CI/CD</title>
+  <title>Rajat's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Your Name</h1>
+      <h1>Rajat Paul</h1>
       <div class="status-line">
         <span class="status-dot"></span>
         <span id="status">Building reliable systems</span>
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <section>
+    <section class="contact-section">
       <h2>Contact</h2>
       <a href="mailto:your@email.com" class="contact-link">
         → your@email.com
